# mastodon-BDSM

./: .flaskenv  .gitignore  Pipfile  README.md  README.org  input.txt  pyproject.toml  requirements.txt
BDSM/: __init__.py  commands.py  models.py  toot.py  views.py
BDSM/static/css/: style.css
BDSM/templates/: archive.html  base.html  register.html  settings.html  toot.html  view.html
data/: .gitignore
misc/: stopwords.txt  user_dict.txt
